# RSP_Project

./: README.md
aruco_pose_estimation/: CMakeLists.txt  package.xml
aruco_pose_estimation/include/aruco_pose_estimation/: tag_pose_estimation.hpp
aruco_pose_estimation/src/: tag_PE_node.cpp  tag_pose_estimation.cpp
base2tag/: CMakeLists.txt  package.xml
base2tag/include/base2tag/: base2tag_srv.hpp
base2tag/src/: base2tag_srv.cpp  server_node.cpp
gazebo_simulation/: README.txt
gazebo_simulation/gz_ros2_control/ign_ros2_control/: package.xml
gazebo_simulation/kobuki_description/: CMakeLists.txt  package.xml
gazebo_simulation/kobuki_description/launch/: view.rviz  view_model.launch
gazebo_simulation/kobuki_description/urdf/: common_properties.urdf.xacro  drive_gazebo.xacro  kobuki.urdf.xacro  kobuki_standalone.urdf.xacro
gazebo_simulation/open_manipulator_description/: CMakeLists.txt  package.xml
gazebo_simulation/open_manipulator_description/config/: controller.yaml
gazebo_simulation/open_manipulator_description/launch/: view.launch
gazebo_simulation/open_manipulator_description/urdf/: camera_gazebo.xacro  joint_control_gazebo.xacro  op_robot.xacro  open_manipulator_x.urdf.xacro
gazebo_simulation/turtlebot_description/: CMakeLists.txt  package.xml
gazebo_simulation/turtlebot_description/config/: ekf.yaml
gazebo_simulation/turtlebot_description/launch/: total_bringup.launch  view.launch  view.rviz
gazebo_simulation/turtlebot_description/robots/: robot_all.urdf.xacro  turtlebot.urdf.xacro  turtlebot_lidar.urdf.xacro
gazebo_simulation/turtlebot_description/urdf/: lidar.xacro  turtlebot_common_library.urdf.xacro  turtlebot_gazebo.urdf.xacro
gazebo_simulation/turtlebot_description/urdf/stacks/: circles.urdf.xacro  hexagons.urdf.xacro
gazebo_simulation/turtlebot_gazebo/: CMakeLists.txt  package.xml
gazebo_simulation/turtlebot_gazebo/config/: map.pgm  map.yaml  my_world.sdf
gazebo_simulation/turtlebot_gazebo/launch/: simulation_nav.py  simulation_slam.py  simulation_startup.launch  simulation_startup.py  slam.rviz  view.rviz
gazebo_simulation/turtlebot_gazebo/urdf/: turtlebot.xacro
kobuki_ros-devel/kobuki_node/config/: kobuki_node_params.yaml
kobuki_ros-devel/kobuki_node/launch/: kobuki_node-launch.py
open_manipulator/open_manipulator_x_controller/src/: open_manipulator_x_controller.cpp
open_manipulator/open_manipulator_x_description/launch/: view.launch
pnpm/: CMakeLists.txt  package.xml
pnpm/include/pnpm/: pnpm.hpp
pnpm/src/: client.cpp  pnpm.cpp  server.cpp
rplidar_ros2/launch/: rplidar.launch.py
rsp_msgs/: CMakeLists.txt  package.xml
rsp_msgs/action/: RSP.action
rsp_msgs/msg/: Tmi.msg
rsp_msgs/srv/: GetTrans.srv
rspmain/: CMakeLists.txt  package.xml
rspmain/include/rspmain/: rspmain.hpp
rspmain/src/: mainexec.cpp  rspmain.cpp
slam_launch/: CMakeLists.txt  package.xml
slam_launch/config/: map.pgm  map.yaml
slam_launch/launch/: nav.py  slam.py
